--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "react-jsonschema-form",
-  "version": "2.0.0-alpha.1",
-  "private": true,
   "description": "monorepo for react-jsonschema-form and its themes",
+  "name": "@vidyvideni/react-jsonschema-form",
+  "version": "2.0.0-alpha.11",
   "scripts": {
     "postinstall": "lerna bootstrap",
     "bootstrap": "lerna bootstrap",
@@ -15,8 +14,8 @@
     "dist": "lerna run dist"
   },
   "dependencies": {
-    "prettier": "^1.18.2",
-    "lerna": "^3.18.3"
+    "lerna": "^3.18.3",
+    "prettier": "^1.18.2"
   },
   "prettier": {
     "jsxBracketSameLine": true,
