--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,4 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "2.0.0-alpha.2"
+  "packages": ["packages/*"],
+  "version": "2.0.0-alpha.11"
 }
