--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vidyvideni/rjsf-core",
-  "version": "2.0.0-alpha.7",
+  "version": "2.0.0-alpha.21",
   "description": "A simple React component capable of building HTML forms out of a JSON schema.",
   "scripts": {
     "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
@@ -48,7 +48,8 @@
     "prop-types": "^15.7.2",
     "react-app-polyfill": "^1.0.4",
     "react-is": "^16.9.0",
-    "shortid": "^2.2.14"
+    "shortid": "^2.2.14",
+    "set-value": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
